--- a/index.html
+++ b/index.html
@@ -13,30 +13,36 @@
 </head>
 <body>
     <header class="header"> 
-        <nav class="header-navigation">
-            <a class="header-logo" href="./index.html">Web<span class="studio">Studio</span></a>
-            <ul class="header-menu-list">
+        <div class="container">
+          <nav class="header-navigation">
+             <a class="header-logo" href="./index.html">Web<span class="studio">Studio</span></a>
+             <ul class="header-menu-list">
               <li class="header-menu-item"><a class="header-menu-link" href="./index.html" target="_blank">Studio</a></li>
               <li class="header-menu-item"><a class="header-menu-link" href="" target="_blank">Portfolio</a></li>
               <li class="header-menu-item"><a class="header-menu-link" href="" target="_blank">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="address">
-          <ul class="address-list">
+             </ul>
+          </nav>
+          <address class="address">
+            <ul class="address-list">
             <li class="address-item"><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li class="address-item"><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
-        </address>
+          </address>
+      </div>
     </header>
     <main>
-      <!--section-hero-->
+    <!--section-hero-->
       <section class="section-hero">
-        <h1 class="section-hero-title">Effective Solutions
+        <div class="container">
+        <h1 class="section-hero-title">Effective Solutions<br>
         for Your Business</h1>
         <button class="section-hero-button" type="button">Order Service</button>
+        </div> 
       </section>
+      
       <!--secnion-goals-->
         <section class="section-goals">
+          <div class="container">
             <h2 class="section-goals-title">Goals and methodology</h2>
           <ul class="section-goals-list">
             <li class="section-goals-item"><h3 class="section-goals-item-title">Strategy</h3>
@@ -53,9 +59,11 @@
             <p class="section-goals-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
             </p></li>
           </ul>
+        </div>
         </section>
         <!--section-team-->
         <section class="team">
+          <div class="container">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
             <li class="team-item">
@@ -79,9 +87,11 @@
                 <p class="team-text">UI Designer</p>
             </li>
         </ul>
+      </div>
         </section>
         <!--secnion-portfolio-->
         <section class="portfolio">
+          <div class="container">
          <h2 class="portfolio-title">Our Portfolio</h2>
          <ul class="portfolio-list">
           <li class="portfolio-item">
@@ -115,13 +125,16 @@
             <p class="portfolio-text">Marketing</p>
           </li>
          </ul>
+        </div>
         </section>
     </main>
     <!--section-->
     <footer class="footer">
+      <div class="container">
         <a class="footer-logo" href="./index.html">Web<span class="footer-studio">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
+      </div>  
     </footer>
 </body>
 </html>
