hw3 second step

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <main>
     <!--section-hero-->
       <section class="section-hero">
-        <div class="container">
-        <h1 class="section-hero-title">Effective Solutions<br>
-        for Your Business</h1>
-        <button class="section-hero-button" type="button">Order Service</button>
+        <div class="container hero-btn">
+          <h1 class="section-hero-title">Effective Solutions<br>
+          for Your Business</h1>
+          <button class="section-hero-button" type="button">Order Service</button>
         </div> 
       </section>
       
