--- a/index.html
+++ b/index.html
@@ -65,30 +65,38 @@
         <!--section-team-->
         <section class="team">
           <div class="container">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-            <li class="team-item">
-                <img class="team-img" src="./images/img/img.jpg" alt="Mark Guerrero" width="264" height="260"/>
-                <h3 class="team-name">Mark Guerrero</h3>
-                <p class="team-text">Product Designer</p>
-            </li>
-            <li class="team-item">
-                <img class="team-img" src="./images/img/img(1).jpg" alt="Tom Ford" width="264" height="260"/>
-                <h3 class="team-name">Tom Ford</h3>
-                <p class="team-text">Frontend Developer</p>
-            </li>
-            <li class="team-item">
-                <img class="team-img" src="./images/img/img(2).jpg" alt="Camila Garcia" width="264" height="260"/>
-                <h3 class="team-name">Camila Garcia</h3>
-                <p class="team-text">Marketing</p>
-            </li>
-            <li class="team-item">
-                <img class="team-img" src="./images/img/img(3).jpg" alt="Daniel Wilson" width="264" height="260"/>
-                <h3 class="team-name">Daniel Wilson</h3>
-                <p class="team-text">UI Designer</p>
-            </li>
-        </ul>
-      </div>
+            <h2 class="team-title">Our Team</h2>
+              <ul class="team-list">
+                <li class="team-item">
+                  <img class="team-img" src="./images/img/img.jpg" alt="Mark Guerrero" width="264" height="260"/>
+                  <div class="text-container">
+                    <h3 class="team-name">Mark Guerrero</h3>
+                    <p class="team-text">Product Designer</p>
+                  </div>
+                </li>
+                <li class="team-item">
+                  <img class="team-img" src="./images/img/img(1).jpg" alt="Tom Ford" width="264" height="260"/>
+                  <div class="text-container">
+                    <h3 class="team-name">Tom Ford</h3>
+                    <p class="team-text">Frontend Developer</p>
+                  </div>
+                </li>
+                <li class="team-item">
+                  <img class="team-img" src="./images/img/img(2).jpg" alt="Camila Garcia" width="264" height="260"/>
+                  <div class="text-container">
+                    <h3 class="team-name">Camila Garcia</h3>
+                    <p class="team-text">Marketing</p>
+                  </div>
+                </li>
+                <li class="team-item">
+                  <img class="team-img" src="./images/img/img(3).jpg" alt="Daniel Wilson" width="264" height="260"/>
+                  <div class="text-container">
+                    <h3 class="team-name">Daniel Wilson</h3>
+                    <p class="team-text">UI Designer</p>
+                  </div>
+                </li>
+              </ul>
+           </div>
         </section>
         <!--secnion-portfolio-->
         <section class="portfolio">
@@ -97,33 +105,45 @@
          <ul class="portfolio-list">
           <li class="portfolio-item">
             <img class="portfolio-img" src="./images/img/img4min.jpg" alt="Banking App" width="360" />
-            <h3 class="portfolio-name">Banking App</h3>
-            <p class="portfolio-text">App</p>
+            <div class="app-portfolio">
+              <h3 class="portfolio-name">Banking App</h3>
+              <p class="portfolio-text">App</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img class="portfolio-img" src="./images/img/img5min.jpg" alt="Cashless Payment" width="360" />
-            <h3 class="portfolio-name">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
+            <div class="app-portfolio">
+              <h3 class="portfolio-name">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img class="portfolio-img" src="./images/img/img6min.jpg" alt="Meditation App" width="360" />
-            <h3 class="portfolio-name">Meditation App</h3>
-            <p class="portfolio-text">App</p>
+            <div class="app-portfolio">
+              <h3 class="portfolio-name">Meditation App</h3>
+              <p class="portfolio-text">App</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img class="portfolio-img" src="./images/img/img7min.jpg" alt="Taxi Service" width="360" />
-            <h3 class="portfolio-name">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
+            <div class="app-portfolio">
+              <h3 class="portfolio-name">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img class="portfolio-img" src="./images/img/img8min.jpg" alt="Screen Illustrations" width="360" />
-            <h3 class="portfolio-name">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
+            <div class="app-portfolio">
+              <h3 class="portfolio-name">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img class="portfolio-img" src="./images/img/img9min.jpg" alt="Online Courses" width="360" />
-            <h3 class="portfolio-name">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
+            <div class="app-portfolio">
+              <h3 class="portfolio-name">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
+            </div>
           </li>
          </ul>
         </div>
